# whynot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: lib.rs
static/: style.css
templates/: article.html  layout.html  list.html
