[package]
name = "whynot"
version = "0.2.1"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.7", features = [
    "http1",
    "http2",
    "tokio",
    "query",
    "original-uri",
], default-features = false }
clap = { version = "4", features = ["derive"] }
fjall = "2.11.2"
jiff = { version = "0.2", default-features = false, features = ["std"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = [
    "fs",
    "compression-zstd",
    "normalize-path"
] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
rpath = false
